// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<img
  alt="__ALT__"
  className="Image"
  src="__SRC__"
  style={
    Object {
      "objectFit": undefined,
    }
  }
  width="100%"
/>
`;

exports[`Button renders with borderRadiusLeft 1`] = `
<img
  alt="__ALT__"
  className="borderRadiusLeft"
  src="__SRC__"
  style={
    Object {
      "objectFit": undefined,
    }
  }
  width="100%"
/>
`;
